dz/static/style.css
html, body {background:#f0ede6;margin:0;padding:0;}
body {font-size:100%;line-height:1.25em;font-family:"PT Sans", sans-serif;}

.site {position:relative;width:960px;margin:0 auto 3em;padding:0;background:#fff;color:#333;}
.site > section {clear:both;overflow:hidden;}

header, footer {display:block;clear:both;}
ol, ul, li {list-style:none;margin:0;padding:0;}

header {position:relative;width:100%;height:150px;background:url(img/header_bg.png) no-repeat;overflow:hidden;}
header h1 {position:absolute;top:0;left:20px;width:150px;height:120px;margin:0;background:url(img/delajozate.png) no-repeat center bottom #3a6e85;color:white;font-family:Arvo, sans-serif;}
header h1 span {visibility:hidden;}

nav.top {position:absolute;top:40px;left:200px;background:transparent;color:#fff;line-height:1.875em;padding:0 .5em;overflow:hidden;}
nav {background:#000;color:#fff;line-height:1.875em;padding:0 .5em;overflow:hidden;}
nav a {color:#fff;text-decoration:none;}
nav ol {list-style:none;margin:0;padding:0;}
nav ol li {float:left;margin:0;padding:0;}
nav ol li a {padding:.625em;display:block;}

footer {background:#000;color:#fff;}
footer p {padding:.625em;}
footer a {color:#fff;}

.random {margin:1.25em 0 2.5em;}

.cards > li {width:25%;float:left;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;padding:0 1em 1em;}

/* card */
.card {background:#fff;padding:10px;position:relative;border:1px solid rgba(0,0,0,.1);
	-moz-border-radius:10px;-webkit-border-radius:10px;border-radius:10px;-moz-box-shadow:0 2px 4px rgba(0,0,0,.3);-webkit-box-shadow:0 2px 4px rgba(0,0,0,.3);box-shadow:0 2px 4px rgba(0,0,0,.3);
}
.card h2 {position:absolute;color:#fff;background:rgba(0,0,0,.5);left:0;top:0;margin:11px 11px 0;font-size:1.5em;line-height:1.25em;padding:.125em .25em;}
.card .stranka {width:30px;height:30px;line-height:30px;text-align:center;border:1px solid rgba(0,0,0,.05);position:absolute;right:-7px;top:-7px;font-size:.625em;text-transform:uppercase;
	-moz-border-radius:20px;-webkit-border-radius:20px;border-radius:20px;
}
.card .stranka a {color:#000;text-decoration:none;display:block;width:100%;height:100%;
	-moz-border-radius:20px;-webkit-border-radius:20px;border-radius:20px;
}
.card .stranka .sns {background:yellow;}
.card .stranka .zares {background:orange;}
.card .stranka .sd {background:red;color:#fff;}
/* img */
.card .img {border:1px solid #999;height:240px;overflow:hidden;}
.card .img img {max-width:100%;width:100%;display:block;}
/* stats */
.card dt {float:left;}
.card dd {border-bottom:1px dotted #666;padding:0;margin:0;text-align:right;}
/* badges */
.card .badges {border-left:1px solid #999;overflow:hidden;margin:0 0 .625em;}
.card .badges li {border-right:1px solid #999;float:left;font-size:.625em;width:25%;padding:0 .3em;
	-moz-box-sizing:border-box;
	-webkit-box-sizing:border-box;
	box-sizing:border-box;
}
.card .badges li span {font-size:2em;display:block;}

